--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN/CWLD+ZLKiyHJpGsIGy2r",
+      "authorship_tag": "ABX9TyObwemLhUJdrNaHp/EGzFdz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -148,6 +148,9 @@
         "  score_mse = mean_squared_error(y_true, y_pred)\n",
         "  print(\"\\nMean Squared Error Score of {}: {}\".format(classifier, score_mse))\n",
         "\n",
+        "  score_roc_auc = roc_auc_score(y_true, probabilities)\n",
+        "  print(\"\\nAUC Score of {}: {}\".format(classifier, score_roc_auc))\n",
+        "\n",
         "  plt.figure(figsize=(13,10))\n",
         "  plt.subplot(221)\n",
         "  sb.heatmap(confusion_matrix(y_true,y_pred),annot=True,fmt = \"d\",linecolor=\"k\",linewidths=3)\n",
@@ -156,7 +159,7 @@
         "\n",
         "  false_positive_rate, true_positive_rate, thresholds = roc_curve(y_true, probabilities)\n",
         "  plt.subplot(222)\n",
-        "  plot_roc_curve(false_positive_rate, true_positive_rate, roc_auc_score(y_true, probabilities))\n",
+        "  plot_roc_curve(false_positive_rate, true_positive_rate, score_roc_auc)\n",
         "\n",
         "  if feature_importances is not None:\n",
         "    plt.subplot(223)\n",
@@ -165,7 +168,7 @@
         "    plt.xlabel('Score')\n",
         "    plt.show()\n",
         "\n",
-        "  df_stats = df_stats.append({\"Model\":classifier, \"Accuracy\":score_acc, \"MSE\":score_mse, \"Cohen Kappa Score\":score_cohenKappa}, ignore_index=True)\n",
+        "  df_stats = df_stats.append({\"Model\":classifier, \"Accuracy\":score_acc, \"MSE\":score_mse, \"Cohen Kappa Score\":score_cohenKappa, \"AUC\": score_roc_auc}, ignore_index=True)\n",
         "  return df_stats\n",
         "\n",
         "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):   \n",
@@ -449,16 +452,17 @@
         "colab": {}
       },
       "source": [
+        "# PARAMETER SETS FOR GRIDSEARCHCV\n",
         "params_LR =   {\"penalty\": ['l1', 'l2'], 'C': [0.001, 0.01, 0.1, 1, 10, 100, 1000]}\n",
         "params_kNN =  {\"n_neighbors\": [3, 5, 7, 9, 11, 13], \"weights\": ['uniform', 'distance']}\n",
         "params_SVM =  [{'C': [0.1, 1, 10, 100, 1000], 'kernel': ['linear']},\n",
         "               {'C': [0.1, 1, 10, 100, 1000], 'gamma': [1.0/50.0, 1.0/200.0, 1.0/500.0, 1.0/1000.0], 'kernel': ['rbf', 'poly', 'sigmoid']}]\n",
-        "params_DT =   {\"criterion\": [\"gini\", \"entropy\"], \"max_depth\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, None], \"min_samples_leaf\": list(range(1,10,1))}\n",
-        "params_RF =   {\"n_estimators\": [250, 500], \"max_depth\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, None], \"min_samples_leaf\": list(range(1,10,1))}\n",
-        "params_AB =   {\"n_estimators\": [250, 500]}\n",
-        "params_GB =   {\"n_estimators\": [250, 500], \"loss\": ['deviance', 'exponential'], \"max_depth\": [3, 4, 5, 6, 7, 8, 9, 10], \"min_samples_leaf\": list(range(1,10,1))}\n",
-        "params_XGB =  {}\n",
-        "params_ET =   {}\n",
+        "params_DT =   {\"criterion\": [\"gini\", \"entropy\"], \"max_depth\": [1, 2, 3, 4, 5, 6, 7, None], \"min_samples_leaf\": list(range(1,10,1))}\n",
+        "params_RF =   {\"criterion\": [\"gini\", \"entropy\"], \"n_estimators\": [500, 1000], \"max_depth\": [1, 2, 3, 4, 5, 6, 7, None], \"min_samples_leaf\": list(range(1,10,1))}\n",
+        "params_AB =   {\"n_estimators\": [500, 1000]}\n",
+        "params_GB =   {\"n_estimators\": [500, 1000], \"loss\": ['deviance', 'exponential'], \"learning_rate\": [0.05, 0.1], \"max_depth\": [3, 4, 5, 6, 7], \"min_samples_leaf\": list(range(1,10,1))}\n",
+        "params_XGB =  {\"n_estimators\": [500, 1000], \"eta\": [0.1, 0.2, 0.3]}\n",
+        "params_ET =   {\"criterion\": [\"gini\", \"entropy\"], \"n_estimators\": [500, 1000], \"max_depth\": [1, 2, 3, 4, 5, 6, 7, None]}\n",
         "\n",
         "list_paramSets = [params_LR, params_kNN, params_SVM, params_DT, params_RF, params_AB, params_GB, params_XGB, params_ET]\n",
         "\n",
@@ -468,7 +472,7 @@
         "list_clfNames = [\"Logistic Regression\", \"k-Nearest Neighbors\", \"Support Vector Machines\", \"Decision Tree\",\n",
         "                 \"Random Forest\", \"AdaBoost\", \"Gradient Boosting\", \"XGBoost\", \"Extra Tree\"]\n",
         "\n",
-        "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score'])\n",
+        "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score', 'AUC'])\n",
         "\n",
         "for classifier, paramSet, classifierName in zip(list_classifiers, list_paramSets, list_clfNames):\n",
         "  gs = GridSearchCV(\n",
@@ -483,8 +487,8 @@
         "  if classifier == DecisionTreeClassifier():\n",
         "    params_AB.update({\"base_estimator\": gs.best_estimator_})\n",
         " \n",
-        "  print(\"\\n{} Best Score: {}\".format(classifier, gs.best_score_))\n",
-        "  print(\"\\n{} Best Parameters Set:\\n\".format(classifier))\n",
+        "  print(\"\\n{} Best Score: {}\".format(classifierName, gs.best_score_))\n",
+        "  print(\"\\n{} Best Parameters Set:\\n\".format(classifierName))\n",
         "  for param in sorted(paramSet.keys()):\n",
         "    print(\"Parameter {}: {}\".format(param, gs.best_estimator_.get_params()[param]))\n",
         "\n",
@@ -518,7 +522,10 @@
         "plot_learning_curve(clf_nb, \"Learning Curve\", X_train, y_train, n_jobs=-1)\n",
         "\n",
         "precisions, recalls, thresholds = precision_recall_curve(y_train, y_pred)\n",
-        "plot_prec_recall_vs_thresh(precisions, recalls, thresholds)"
+        "plot_prec_recall_vs_thresh(precisions, recalls, thresholds)\n",
+        "\n",
+        "dataframe_stats.sort_values(by='Accuracy', ascending=False)\n",
+        "print(dataframe_stats)"
       ],
       "execution_count": 0,
       "outputs": []
