--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOwW2ImUYhDEnvzFSBpY/G8",
+      "authorship_tag": "ABX9TyMsqmBxXOxYs4GXiWcE9CzH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,24 +46,22 @@
         "import time\n",
         "import copy\n",
         "import pydot\n",
-        "import pydotplus\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sb\n",
-        "import multiprocessing\n",
         "from graphviz import Source\n",
         "from sklearn.svm import SVC\n",
         "import matplotlib.pyplot as plt\n",
-        "from IPython.display import HTML \n",
         "from warnings import simplefilter\n",
         "from xgboost import XGBClassifier\n",
+        "from IPython.display import display\n",
         "from imblearn.over_sampling import SMOTE\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.exceptions import FitFailedWarning\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV, learning_curve, KFold, cross_val_score\n",
         "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier, ExtraTreesClassifier\n",
         "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report, precision_recall_curve, roc_curve, roc_auc_score, average_precision_score  \n",
@@ -97,8 +95,7 @@
         "\n",
         "def printDataframe(dataframe, frame_style, sort_by, ascending=False):\n",
         "  dataframe = dataframe.sort_values(by=sort_by, ascending=ascending)\n",
-        "  displayDataFrame = (dataframe.style.set_table_styles(frame_style).hide_index())\n",
-        "  return displayDataFrame\n",
+        "  display(dataframe.style.set_table_styles(frame_style).hide_index())\n",
         "\n",
         "def plot_2D_space(X, y, label='Classes'):   \n",
         "  colors = ['#1F77B4', '#FF7F0E']\n",
@@ -490,7 +487,7 @@
       "metadata": {
         "id": "SoSYGdl37N42",
         "colab_type": "code",
-        "outputId": "8c4b81a7-23c9-4360-9d8a-809b2e723652",
+        "outputId": "5d657fa0-5944-438c-a764-69a4db4f55de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -499,7 +496,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.3)\n"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -564,7 +561,7 @@
         "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score', 'Elapsed Time'])\n",
         "dataframe_grid = pd.DataFrame(columns=['Parameter Set', 'Mean Test Score'])\n",
         "\n",
-        "frameStyle = [dict(selector=\"th\", props=[(\"font-size\", \"110%\"), (\"text-align\", \"left\")])]"
+        "frameStyle = [hover(), dict(selector=\"th\", props=[(\"font-size\", \"120%\"), (\"text-align\", \"left\")])]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -635,8 +632,6 @@
         "\n",
         "      #In case of need, it is possible to plot the decision tree. It is disabled below because of the size for such dataset.\n",
         "      #plot_decision_tree(gs.best_estimator_, dataset.columns[:-1])\n",
-        "  \n",
-        "#####\n",
         "\n",
         "# We cannot use Naive Bayes Classifier with GridSearchCV\n",
         "clf_NB = GaussianNB() \n",
@@ -1562,31 +1557,67 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qMtGH9j7Nim-",
+        "id": "wFfa33lVgTok",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 127
+        },
+        "outputId": "7f50e9b7-2905-4065-8506-30d776732de2"
       },
       "source": [
-        "import sys\n",
-        "\n",
-        "# for i in range(0, 2):\n",
-        "  \n",
-        "#   df = df.iloc[0:0]\n",
-        "#   for j in range(0,5):\n",
-        "#     df = df.append({\"PS\": j, \"MTS\": j}, ignore_index=True) \n",
-        "  \n",
-        "#   printDataframe(dataframe=df, frame_style=frameStyle, sort_by='MTS')\n",
-        "\n",
         "df = pd.DataFrame(columns=['PS', 'MTS'])\n",
+        "\n",
         "for j in range(0,5):\n",
         "  df = df.append({\"PS\": j, \"MTS\": j}, ignore_index=True) \n",
         "\n",
-        "printDataframe(dataframe=df, frame_style=frameStyle, sort_by='MTS')\n",
-        "\n",
-        "print(\"xx\")\n"
+        "printDataframe(dataframe=df, frame_style=frameStyle, sort_by='MTS')\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style  type=\"text/css\" >\n",
+              "    #T_865602ea_6b0c_11ea_9367_0242ac1c0002 tr:hover {\n",
+              "          background-color: #e6e6ff;\n",
+              "          font-weight: bold;\n",
+              "    }    #T_865602ea_6b0c_11ea_9367_0242ac1c0002 th {\n",
+              "          font-size: 120%;\n",
+              "          text-align: left;\n",
+              "    }</style><table id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >PS</th>        <th class=\"col_heading level0 col1\" >MTS</th>    </tr></thead><tbody>\n",
+              "                <tr>\n",
+              "                                <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row0_col0\" class=\"data row0 col0\" >4</td>\n",
+              "                        <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row0_col1\" class=\"data row0 col1\" >4</td>\n",
+              "            </tr>\n",
+              "            <tr>\n",
+              "                                <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row1_col0\" class=\"data row1 col0\" >3</td>\n",
+              "                        <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row1_col1\" class=\"data row1 col1\" >3</td>\n",
+              "            </tr>\n",
+              "            <tr>\n",
+              "                                <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row2_col0\" class=\"data row2 col0\" >2</td>\n",
+              "                        <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row2_col1\" class=\"data row2 col1\" >2</td>\n",
+              "            </tr>\n",
+              "            <tr>\n",
+              "                                <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row3_col0\" class=\"data row3 col0\" >1</td>\n",
+              "                        <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row3_col1\" class=\"data row3 col1\" >1</td>\n",
+              "            </tr>\n",
+              "            <tr>\n",
+              "                                <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row4_col0\" class=\"data row4 col0\" >0</td>\n",
+              "                        <td id=\"T_865602ea_6b0c_11ea_9367_0242ac1c0002row4_col1\" class=\"data row4 col1\" >0</td>\n",
+              "            </tr>\n",
+              "    </tbody></table>"
+            ],
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7f4464087da0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
