--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMzJGKE4MhA5/ztWj28377B",
+      "authorship_tag": "ABX9TyMcb8SUomFYPfHKebh7Kw8E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,8 +193,8 @@
         "  plot_precision_recall_curve(classifier, y_true, y_pred, probabilities)\n",
         "\n",
         "  if classifier not in df_stats.values:\n",
-        "    df_stats = df_stats.append({\"Model\":classifier, \"Accuracy\":score_acc, \"MSE\":score_mse, \"Cohen Kappa Score\":score_cohenKappa, \"Elapsed Time(sec)\":elapsedTime}, ignore_index=True)\n",
-        "    \n",
+        "    df_stats = df_stats.append({\"Model\":classifier, \"Accuracy\":score_acc, \"MSE\":score_mse, \"Cohen Kappa Score\":score_cohenKappa, \"Training Time(Best Estimator)\":elapsedTime}, ignore_index=True)\n",
+        "\n",
         "  return df_stats\n",
         "\n",
         "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, oversample=True, normalize=True):   \n",
@@ -560,10 +560,10 @@
         "list_clfNames = [\"Logistic Regression\", \"k-Nearest Neighbors\", \"Support Vector Machines\", \"Decision Tree\",\n",
         "                 \"Random Forest\", \"AdaBoost\", \"Gradient Boosting\", \"XGBoost\", \"Extra Trees\"]\n",
         "\n",
-        "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score', 'Elapsed Time(sec)'])\n",
+        "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score', 'Training Time(Best Estimator)'])\n",
         "dataframe_grid = pd.DataFrame(columns=['Parameter Set', 'Mean Test Score'])\n",
         "\n",
-        "frameStyle = [hover(), dict(selector=\"th\", props=[(\"font-size\", \"120%\"), (\"text-align\", \"left\"), ('min-width', '185px')])]\n",
+        "frameStyle = [hover(), dict(selector=\"th\", props=[(\"font-size\", \"120%\"), (\"text-align\", \"left\"), ('min-width', '200px')])]\n",
         "frameStyle2 = [hover(), dict(selector=\"th\", props=[(\"font-size\", \"120%\"), (\"text-align\", \"left\"), ('min-width', '500px')])]"
       ],
       "execution_count": 0,
@@ -608,7 +608,7 @@
         "    dataframe_grid = dataframe_grid.iloc[0:0]\n",
         "    for param, i in zip(gs.cv_results_['params'], range(0, len(gs.cv_results_['params']))):\n",
         "      dataframe_grid = dataframe_grid.append({\"Parameter Set\": param, \"Mean Test Score\": \"%.4f\" % gs.cv_results_['mean_test_score'][i]}, ignore_index=True) \n",
-        "    printDataframe(dataframe=dataframe_grid, frame_style=frameStyle, sort_by='Mean Test Score')\n",
+        "    printDataframe(dataframe=dataframe_grid, frame_style=frameStyle2, sort_by='Mean Test Score')\n",
         "\n",
         "  print(\"\\n{} Parameter Set of the Best Estimator:\\n\".format(classifierName))\n",
         "  for param in paramSet.keys():\n",
@@ -657,7 +657,7 @@
         "plot_learning_curve(clf_NB, \"Learning Curve of Naive Bayes\", X_train, y_train, cv=cv)\n",
         "\n",
         "#Listing the results\n",
-        "printDataframe(dataframe=dataframe_stats, frame_style=frameStyle2, sort_by='Accuracy')"
+        "printDataframe(dataframe=dataframe_stats, frame_style=frameStyle, sort_by='Accuracy')"
       ],
       "execution_count": 116,
       "outputs": [
