--- a/main_withoutOversampling.ipynb
+++ b/main_withoutOversampling.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM0HM/N5pJrJahOY0T/Zjko",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bahadirbasaran/pulsarDetection/blob/master/main_withoutOversampling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -47,9 +59,9 @@
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.exceptions import FitFailedWarning\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
+        "from sklearn.neighbors import KNeighborsClassifier, RadiusNeighborsClassifier\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV, learning_curve, KFold, cross_val_score, StratifiedKFold\n",
         "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier, ExtraTreesClassifier, BaggingClassifier\n",
         "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report, precision_recall_curve, roc_curve, roc_auc_score, average_precision_score  \n",
@@ -230,7 +242,7 @@
       "metadata": {
         "id": "tTIKNq5GCRXx",
         "colab_type": "code",
-        "outputId": "84d77e30-137a-41a2-a547-4b2e509a1d87",
+        "outputId": "3e0ffe57-f159-4b8e-a8de-bb2e22dff594",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 570
@@ -242,7 +254,7 @@
         "print(\"\\n\")\n",
         "dataset.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +429,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -609,7 +621,7 @@
       "metadata": {
         "id": "SoSYGdl37N42",
         "colab_type": "code",
-        "outputId": "df59e766-984f-4c4a-ab05-f779dc1f09cc",
+        "outputId": "42b0b86b-f9f3-479e-ac79-9731554fbafa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 98
@@ -620,7 +632,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.2, obj_preprocessing=obj_prc, oversample=False)"
       ],
-      "execution_count": 38,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,6 +677,7 @@
       "source": [
         "params_LR =  {\"penalty\": ['none', 'l2'], 'C': [0.01, 0.1, 1, 10, 100, 1000]}\n",
         "params_kNN = {\"n_neighbors\": [3, 5, 7, 9], \"weights\": ['uniform', 'distance'], \"metric\": ['euclidean', 'manhattan']}\n",
+        "params_RNC = {\"radius\": [0.15, 0.2, 0.25], \"metric\": ['minkowski', 'manhattan'], \"outlier_label\": ['most_frequent']}\n",
         "params_SVC = {'C': [10, 100], 'gamma': ['scale', 0.0015], 'kernel': ['rbf', 'poly'], 'probability': [True], 'max_iter': [2000]}\n",
         "params_DT =  {\"criterion\": [\"gini\", \"entropy\"], \"max_depth\": [1, 2, None]}\n",
         "params_RF =  {\"n_estimators\": [300], \"criterion\": [\"gini\", \"entropy\"], \"max_depth\": [1, 2, None]}\n",
@@ -674,12 +687,12 @@
         "params_XGB = {\"n_estimators\": [300], \"eta\": [0.025, 0.05]}\n",
         "params_ET =  {\"n_estimators\": [500], \"criterion\": [\"gini\", \"entropy\"], \"max_depth\": [1, 2, None]}\n",
         "\n",
-        "list_paramSets = [params_LR, params_kNN, params_SVC, params_DT, params_RF, params_AB, params_BC, params_GB, params_XGB, params_ET]\n",
+        "list_paramSets = [params_LR, params_kNN, params_RNC, params_SVC, params_DT, params_RF, params_AB, params_BC, params_GB, params_XGB, params_ET]\n",
         "\n",
-        "list_classifiers = [LogisticRegression(), KNeighborsClassifier(), SVC(), DecisionTreeClassifier(), RandomForestClassifier(),\n",
+        "list_classifiers = [LogisticRegression(), KNeighborsClassifier(), RadiusNeighborsClassifier(), SVC(), DecisionTreeClassifier(), RandomForestClassifier(),\n",
         "                    AdaBoostClassifier(), BaggingClassifier(), GradientBoostingClassifier(), XGBClassifier(), ExtraTreesClassifier()]\n",
         "\n",
-        "list_clfNames = [\"Logistic Regression\", \"k-Nearest Neighbors\", \"Support Vector Machines\", \"Decision Tree\",\n",
+        "list_clfNames = [\"Logistic Regression\", \"k-Nearest Neighbors\", \"Radius Neighbors\", \"Support Vector Machines\", \"Decision Tree\",\n",
         "                 \"Random Forest\", \"AdaBoost\", \"Bagging\", \"Gradient Boosting\", \"XGBoost\", \"Extra Trees\"]\n",
         "\n",
         "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'MSE', 'Cohen Kappa Score', 'Training Time(Best Estimator)'])\n",
