--- a/main_withoutOversampling.ipynb
+++ b/main_withoutOversampling.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTI3N16bu02H6M9r255+d0",
+      "authorship_tag": "ABX9TyNnQd4CArDXgtpNI+/QySTx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,6 @@
       },
       "source": [
         "import time\n",
-        "import copy\n",
         "import pydot\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -55,14 +54,12 @@
         "from warnings import simplefilter\n",
         "from xgboost import XGBClassifier\n",
         "from IPython.display import display\n",
-        "from imblearn.over_sampling import SMOTE\n",
-        "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.exceptions import FitFailedWarning\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
+        "from sklearn.exceptions import FitFailedWarning\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
         "from sklearn.neighbors import KNeighborsClassifier, RadiusNeighborsClassifier\n",
-        "from sklearn.model_selection import train_test_split, GridSearchCV, learning_curve, KFold, cross_val_score, StratifiedKFold\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV, learning_curve, StratifiedKFold\n",
         "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier, ExtraTreesClassifier, BaggingClassifier\n",
         "from sklearn.metrics import accuracy_score, mean_squared_error, cohen_kappa_score, confusion_matrix, classification_report, precision_recall_curve, roc_curve, roc_auc_score, average_precision_score  \n",
         "simplefilter(\"ignore\", UserWarning)\n",
@@ -254,7 +251,7 @@
         "print(\"\\n\")\n",
         "dataset.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +481,7 @@
         "  sb.violinplot(data=dataset, y=dataset.columns[i], x=\"target_class\")\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
