--- a/main_withoutOversampling.ipynb
+++ b/main_withoutOversampling.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOPzF8C8PL7mpqZBMUU98kE",
+      "authorship_tag": "ABX9TyN4XwBfLriOtR6dvMMLuMVT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,7 +174,7 @@
         "  # plot_precision_recall_curve(classifier, y_true, y_pred, probabilities)\n",
         "\n",
         "  if classifier not in df_stats.values:\n",
-        "    df_stats = df_stats.append({\"Model\": classifier, \"F1 Score\": \"%.4f\" % score_f1, \"Accuracy\": \"%.4f\" % score_acc, \"MSE\": \"%.4f\" % score_mse, \"Elapsed Time\":elapsedTime}, ignore_index=True)\n",
+        "    df_stats = df_stats.append({\"Model\": classifier, \"F1 Score\": \"%.4f\" % score_f1, \"Accuracy\": \"%.4f\" % score_acc, \"MSE\": \"%.4f\" % score_mse, \"Elapsed Time\": \"%.4f\" % elapsedTime}, ignore_index=True)\n",
         "\n",
         "  return df_stats\n",
         "\n",
@@ -751,8 +751,8 @@
         "\n",
         "      plot_decision_tree(gs.best_estimator_, dataset.columns[:-1], rotate=True)\n",
         "\n",
-        "  print('\\033[1m' + '\\033[94m' + \"\\n#########################################################################################################################\")\n",
-        "  print(\"#########################################################################################################################\\n\" + '\\033[0m')\n",
+        "  print('\\033[1m' + '\\033[94m' + \"\\n################################################################################################\")\n",
+        "  print(\"################################################################################################\\n\" + '\\033[0m')\n",
         "\n",
         "#Listing the results\n",
         "printDataframe(dataframe=dataframe_stats, frame_style=frameStyle, sort_by=['F1 Score', 'Accuracy', 'Elapsed Time'], ascending=[False, False, True])"
