--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
       "name": "main.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOylALmez4y4zo9oqGW2+Vd",
+      "authorship_tag": "ABX9TyMD2WMx/twcBqVmBFc9dosx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "tTIKNq5GCRXx",
         "colab_type": "code",
-        "outputId": "6c7c288e-c44d-426e-8d0f-60c52df36239",
+        "outputId": "b815271e-730d-447c-f7f0-f5fc0ccb9a86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 602
@@ -259,7 +259,7 @@
         "print(\"\\n\")\n",
         "dataset.describe()"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +436,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
@@ -455,7 +455,7 @@
       "metadata": {
         "id": "9yBdhGhI6O0X",
         "colab_type": "code",
-        "outputId": "2858c253-1368-45d9-d449-cba14ed93cfb",
+        "outputId": "48270e2c-0c83-4a4e-c838-4206b5b355dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -463,7 +463,7 @@
       },
       "source": [
         "# Correlation Matrix Heatmap\n",
-        "print(\"\\n\\nCorrelation Matrix Heatmap:\\n\\n\")\n",
+        "print('\\033[1m' + '\\033[4m' + '\\033[36m' + \"\\n\\nCorrelation Matrix Heatmap\\n\\n\")\n",
         "_, ax = plt.subplots(figsize = (7,7))\n",
         "hm = sb.heatmap(dataset.corr(), annot = True, linewidths=.5, fmt = \".3f\", ax=ax)\n",
         "bottom, top = hm.get_ylim()\n",
@@ -471,7 +471,7 @@
         "plt.show()\n",
         "\n",
         "# Dist Plot\n",
-        "print(\"\\n\\nDistribution Plot:\\n\")\n",
+        "print('\\033[1m' + '\\033[4m' + '\\033[36m' + \"\\n\\nDistribution Plot\\n\\n\")\n",
         "plt.figure(figsize=(25,20))\n",
         "for i, column, color in zip(list(range(0,8)), dataset.columns[:-1], ['r', 'g', 'b', 'y', 'purple', 'grey', 'black', 'orange']):\n",
         "  plt.subplot(4,2,i+1)\n",
@@ -479,26 +479,26 @@
         "plt.show()\n",
         "\n",
         "# Pair Plot\n",
-        "print(\"\\n\\nPair Plot:\\n\\n\")\n",
+        "print('\\033[1m' + '\\033[4m' + '\\033[36m' + \"\\n\\nPair Plot\\n\\n\")\n",
         "sb.pairplot(data=dataset, palette=\"husl\", hue=\"target_class\", vars=list(dataset.columns[:-1]), height=3)\n",
         "plt.show()\n",
         "\n",
         "# Box Plot\n",
-        "print(\"\\n\\Box Plot:\\n\\n\")\n",
+        "print('\\033[1m' + '\\033[4m' + '\\033[36m' + \"\\n\\nBox Plot\\n\\n\")\n",
         "plt.figure(figsize=(25,20))\n",
         "for i in range(8):\n",
         "  plt.subplot(4,2,i+1)\n",
         "  sb.boxplot(data=dataset, y=dataset.columns[i], x=\"target_class\")\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "\u001b[1m\u001b[4m\u001b[36m\n",
             "\n",
-            "\n",
-            "Correlation Matrix Heatmap:\n",
+            "Correlation Matrix Heatmap\n",
             "\n",
             "\n"
           ],
@@ -520,9 +520,10 @@
         {
           "output_type": "stream",
           "text": [
+            "\u001b[1m\u001b[4m\u001b[36m\n",
             "\n",
+            "Distribution Plot\n",
             "\n",
-            "Distribution Plot:\n",
             "\n"
           ],
           "name": "stdout"
@@ -543,9 +544,9 @@
         {
           "output_type": "stream",
           "text": [
+            "\u001b[1m\u001b[4m\u001b[36m\n",
             "\n",
-            "\n",
-            "Pair Plot:\n",
+            "Pair Plot\n",
             "\n",
             "\n"
           ],
@@ -567,8 +568,9 @@
         {
           "output_type": "stream",
           "text": [
+            "\u001b[1m\u001b[4m\u001b[36m\n",
             "\n",
-            "\\Box Plot:\n",
+            "Box Plot\n",
             "\n",
             "\n"
           ],
@@ -615,7 +617,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = createDataSplits(dataset, [0,1,2,3,4,5,6,7], 8, 0.2, obj_preprocessing=obj_prc)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +746,7 @@
         "#Listing the results\n",
         "printDataframe(dataframe=dataframe_stats, frame_style=frameStyle, sort_by=['F1 Score', 'Accuracy'], ascending=[False, False])"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
