--- a/main.ipynb
+++ b/main.ipynb
@@ -591,6 +591,7 @@
         "# Due to the imbalancy, we need to balance the dataset through oversampling.\n",
         "# In order to prevent leakage, only the training set should be oversampled.\n",
         "# If it is desired to do feature scaling, it is better to do it before oversampling.\n",
+        "# Therefore, \"createDataSplits\" is used twice. The former one to scale, the latter one to create final splits from the scaled&oversampled dataset.\n",
         "\n",
         "# i.g: Let's assume we have 20 samples in dataset.\n",
         "# We'd like to do oversampling and in the end, we'd like to have test set with size of 0.2*total.\n",
