--- a/main.ipynb
+++ b/main.ipynb
@@ -86,26 +86,17 @@
         "colab": {}
       },
       "source": [
-        "def hover(hover_color=\"#e6e6ff\"):\n",
-        "  return dict(selector=\"tr:hover\", props=[(\"background-color\", \"%s\" % hover_color), (\"font-weight\", \"bold\")])\n",
-        "\n",
         "def printDataframe(dataframe, frame_style, sort_by, ascending=False):\n",
         "  dataframe = dataframe.sort_values(by=sort_by, ascending=ascending)\n",
         "  display(dataframe.style.set_table_styles(frame_style).hide_index())\n",
         "\n",
-        "def plot_2D_space(X, y, title='Classes'):   \n",
-        "  colors = ['#1F77B4', '#FF7F0E']\n",
-        "  markers = ['o', 's']\n",
-        "  for l, c, m in zip(np.unique(y), colors, markers):\n",
-        "    plt.scatter(X[y==l, 0], X[y==l, 1], c=c, label=l, marker=m)\n",
-        "  plt.title(title, fontsize=16)\n",
-        "  plt.legend(loc='upper right')\n",
-        "  plt.show()\n",
+        "def hover(hover_color=\"#e6e6ff\"):\n",
+        "  return dict(selector=\"tr:hover\", props=[(\"background-color\", \"%s\" % hover_color), (\"font-weight\", \"bold\")])\n",
         "\n",
         "def plot_confusion_matrix(classifier, y_true, y_pred):\n",
         "  #plt.figure(figsize=(10,5))\n",
-        "  cf_matrix = confusion_matrix(y_true,y_pred)\n",
-        "  group_names = ['True Neg', 'False Pos', 'False Neg', 'True Pos']\n",
+        "  cf_matrix = confusion_matrix(y_true, y_pred)\n",
+        "  group_names = ['True Neg.', 'False Pos.', 'False Neg.', 'True Pos.']\n",
         "  group_counts = [\"{0:0.0f}\".format(value) for value in cf_matrix.flatten()]\n",
         "  labels = [f\"{v1}\\n\\n{v2}\" for v1, v2 in zip(group_names, group_counts)]\n",
         "  labels = np.asarray(labels).reshape(2,2)\n",
@@ -157,29 +148,32 @@
         "  graph = Source(pdot[0].to_string())\n",
         "  display(graph)\n",
         "\n",
-        "def evaluateClassifier(classifier, y_true, y_pred, df_stats):  \n",
+        "def evaluateClassifier(classifier, y_true, y_pred, df_stats):\n",
+        "  # Calculate evaluation metrics  \n",
         "  score_precision = precision_score(y_true, y_pred)\n",
         "  score_recall    = recall_score(y_true, y_pred)\n",
         "  score_f1        = f1_score(y_true, y_pred)\n",
         "  score_acc       = accuracy_score(y_true,y_pred)\n",
         "  score_mse       = mean_squared_error(y_true, y_pred)\n",
         "\n",
+        "  # Print current model's statistics out\n",
         "  dataframe_model = pd.DataFrame(columns=['Model on Test Data', 'Accuracy', 'F1 Score', 'Precision', 'Recall', 'MSE'])\n",
         "  dataframe_model = dataframe_model.append({\"Model on Test Data\": classifier, \"Accuracy\": \"%.4f\" % score_acc, \"F1 Score\": \"%.4f\" % score_f1, \n",
         "                                            'Precision': \"%.4f\" % score_precision, 'Recall': \"%.4f\" % score_recall, \"MSE\": \"%.4f\" % score_mse}, ignore_index=True)\n",
-        "\n",
         "  print(\"\\n\")\n",
-        "  printDataframe(dataframe=dataframe_model, frame_style=frameStyle, sort_by='F1 Score')\n",
+        "  printDataframe(dataframe=dataframe_model, frame_style=frameStyle, sort_by='Accuracy')\n",
         "  print(\"\\n\")\n",
         "\n",
         "  plot_confusion_matrix(classifier, y_true, y_pred)\n",
         "\n",
+        "  # Append current model's statistics into global dataframe\n",
         "  if classifier not in df_stats.values:\n",
         "    df_stats = df_stats.append({\"Model\": classifier, \"Accuracy\": \"%.4f\" % score_acc, \"F1 Score\": \"%.4f\" % score_f1, \n",
         "                                'Precision': \"%.4f\" % score_precision, 'Recall': \"%.4f\" % score_recall, \"MSE\": \"%.4f\" % score_mse}, ignore_index=True)\n",
         "  return df_stats\n",
         "\n",
         "def createDataSplits(dataset, list_dataColumns, targetColumn, testSizeRatio, randomState=42, obj_preprocessing=None, printStats=False):   \n",
+        "  # to selectively create the splits\n",
         "  X = dataset[dataset.columns[list_dataColumns]]\n",
         "  y = dataset[dataset.columns[targetColumn]]\n",
         "    \n",
@@ -188,7 +182,7 @@
         "  if obj_preprocessing is not None:\n",
         "    X_train = obj_preprocessing.fit_transform(X_train)\n",
         "    X_test = obj_preprocessing.transform(X_test)\n",
-        "    #Index of X_train and X_test are changed. We must reset the index of y_train and y_test.Otherwise, index mismatch error.\n",
+        "    # Index of X_train and X_test are changed. We must reset the index of y_train and y_test.Otherwise, index mismatch error.\n",
         "    y_train = y_train.reset_index(drop=True)\n",
         "    y_test = y_test.reset_index(drop=True)\n",
         "\n",
@@ -588,7 +582,7 @@
         }
       },
       "source": [
-        "# Due to the imbalancy, we need to balance the dataset through oversampling.\n",
+        "# Due to the imbalancy, we need to balance the dataset by oversampling.\n",
         "# In order to prevent leakage, only the training set should be oversampled.\n",
         "# If it is desired to do feature scaling, it is better to do it before oversampling.\n",
         "# Therefore, \"createDataSplits\" is used twice. The former one to scale, the latter one to create final splits from the scaled&oversampled dataset.\n",
@@ -720,7 +714,10 @@
         "list_classifiers = [LogisticRegression(), SVC(), DecisionTreeClassifier(), RandomForestClassifier()]\n",
         "list_clfNames = [\"Logistic Regression\", \"Support Vector Machines\", \"Decision Tree\", \"Random Forest\"]\n",
         "\n",
+        "# Dataframe for model and corresponding metric scores\n",
         "dataframe_stats = pd.DataFrame(columns=['Model', 'Accuracy', 'F1 Score', 'Precision', 'Recall', 'MSE'])\n",
+        "\n",
+        "# Dataframe for parameter set and corresponding mean cross validation score pairs\n",
         "dataframe_grid  = pd.DataFrame(columns=['Hyperparameter Set', \"Mean Cross-validation Score\"])\n",
         "\n",
         "# Dataframe stylers\n",
@@ -755,6 +752,7 @@
         }
       },
       "source": [
+        "# Iteratively select classifier, corresponding parameter set and name \n",
         "for classifier, paramSet, classifierName in zip(list_classifiers, list_paramSets, list_clfNames):\n",
         "  \n",
         "  gs = GridSearchCV(\n",
@@ -769,6 +767,7 @@
         "  print('\\033[1m' + '\\033[4m' + '\\033[36m'  + classifierName + '\\033[0m')\n",
         "  print(\"\\nMean Cross-validation Score of the Best Estimator: {}\\n\".format(\"%.4f\" % gs.best_score_))\n",
         "\n",
+        "  # Print out each evaluated parameter set and corresponding mean cross validation score\n",
         "  dataframe_grid = dataframe_grid.iloc[0:0]\n",
         "  for param, i in zip(gs.cv_results_['params'], range(0, len(gs.cv_results_['params']))):\n",
         "    dataframe_grid = dataframe_grid.append({\"Hyperparameter Set\": param, \"Mean Cross-validation Score\": \"%.4f\" % gs.cv_results_['mean_test_score'][i]}, ignore_index=True)\n",
@@ -799,10 +798,11 @@
         "  print('\\033[1m' + '\\033[94m' + \"\\n################################################################################################\")\n",
         "  print(\"################################################################################################\\n\" + '\\033[0m')\n",
         "\n",
-        "#Listing the results\n",
+        "# List the results\n",
         "printDataframe(dataframe=dataframe_stats, frame_style=frameStyle, sort_by=['Accuracy', 'F1 Score'])\n",
         "print(\"\\n\")\n",
         "\n",
+        "# Compare the results with bar graph\n",
         "getDataFrameValues = lambda e: [float(dataframe_stats[e].values[0]), float(dataframe_stats[e].values[1]), float(dataframe_stats[e].values[2]), float(dataframe_stats[e].values[3])]\n",
         "\n",
         "df_comp = pd.DataFrame({'Accuracy':   getDataFrameValues('Accuracy'),\n",
@@ -813,7 +813,7 @@
         "\n",
         "df_comp.plot.bar(figsize=(14,5), grid=True).set_ylim(0.90,1.00)\n",
         "plt.xticks(rotation=0, fontsize=14)\n",
-        "plt.show()\n"
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": [
